--- a/style.css
+++ b/style.css
@@ -13,3 +13,8 @@ img {
   margin-right: auto;
   margin-left: auto;
 }
+a {
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: grey;
+}
