--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ figcaption {
   font-size: 0.9em;
 }
 
-selection#featured-property {
+featured-property {
   width: 800px;
   text-align: center;
 
