--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ figcaption {
   font-size: 0.9em;
 }
 
-featured-property < p {
+featured-property#p {
   width: 800px;
   text-align: center;
   color: red;
