Automatically backed up by Learn

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ figcaption {
   font-size: 0.9em;
 }
 
-selction#featured-property {
+selcetion#featured-property {
   width: 800px;
   text-align: center;
   color: red;
