--- a/style.css
+++ b/style.css
@@ -24,9 +24,10 @@ figcaption {
   font-size: 0.9em;
 }
 
-selcetion#featured-property {
+featured-property#p {
   width: 800px;
   text-align: center;
   color: red;
-
   }
+
+  
