--- a/style.css
+++ b/style.css
@@ -32,5 +32,7 @@ figcaption {
   #details div{
     display: block;
     float: left;
-    color: red;
+    width: 25%;
+    background-color: grey;
+    text-align: center;
   }
