--- a/style.css
+++ b/style.css
@@ -3,3 +3,36 @@ body {
   height: 100%;
   margin: 0;
 }
+header {
+  text-align: center;
+}
+h1 {
+}
+img {
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+}
+a {
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: grey;
+}
+
+figcaption {
+  text-align: center;
+  font-size: 0.9em;
+}
+
+#featured-property p{
+  width: 800px;
+  text-align: center;
+  }
+
+  #details div{
+    display: block;
+    float: left;
+    width: 25%;
+    background-color: grey;
+    text-align: center;
+  }
